# StableVSR

./: .gitignore  CHANGELOG.md  README.md  eval.py  pyproject.toml  requirements-mac.txt  run_stablevsr_mac.py  test.py  train.py  train.sh
.beads/: .beads-credential-key  config.yaml  last-touched  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/dolt/: config.yaml
.beads/dolt/.dolt/: sql-server.info
.beads/dolt/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/StableVSR/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.beads/dolt/StableVSR/.dolt/stats/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
.github/workflows/: ci.yml
dataset/: config_reds.yaml
docs/: adversarial_audit_report.md  apple_silicon.md  backends.md  benchmark_results.md  development.md  inference.md  installation.md  modernization_audit.md  profiling_audit.md  quality_results.md  quality_tradeoffs.md  release_acceptance.md
docs/adr/: 0001-rust-acceleration-decision.md
pipeline/: stablevsr_pipeline.py
scripts/: benchmark_mlx.py  check_weight_mapping.py  dump_keys.py  profile_inference.py  quality_compare.py  test_mlx_e2e.py  test_mlx_forward_pass.py  test_mlx_weight_load.py
src/stablevsr/: __init__.py  cli.py
src/stablevsr/backends/: __init__.py  base.py  mlx_backend.py  registry.py  torch_backend.py
src/stablevsr/mlx/: __init__.py  chunked_pipeline.py  pipeline.py  presets.py  scheduler.py  weight_utils.py
src/stablevsr/mlx/flow/: __init__.py  raft_bridge.py
src/stablevsr/mlx/models/: __init__.py  controlnet.py  text_encoder.py  unet.py  vae.py
src/stablevsr/mlx/nn/: __init__.py  attention.py  resnet.py  sampling.py
tests/: test_backends.py  test_chunked_pipeline.py  test_cli.py  test_cli_enhancements.py  test_flow_utils.py  test_mlx_components.py  test_presets.py
util/: flow_utils.py
